# repomd

./: .cirrus.yml  .codecov.yml  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
source/: repomd.py
source/repomd/: __init__.py  _sqlite.py  _xml.py
tests/: test_repomd.py  test_sqlite3.py
tests/data/: Makefile  brisket.spec  buildtimes  chicken.spec  ribs.spec  sausage.spec
tests/data/empty_repo/repodata/: repomd.xml
tests/data/repo/repodata/: repomd.xml
tests/data/sqlite_repo/repodata/: 1d715fb718bc660169686872c2ed279434de1ac165b4bd09597fd4916c064a7a-primary.sqlite.bz2  38e643960e7a532acd8329dc444b2b3ad95fa847ad517e0c36b7a4f00fd00b52-other.sqlite.bz2  88f5afd38d21f0701b6ef3c051ee3cc26352775fd34f6bccebcb689548dd3677-filelists.sqlite.bz2  repomd.xml
tests/fixtures/empty_repodata/: repomd.xml
tests/repodata/: repomd.xml
