[metadata]
name = repomd
author = Carl George
author_email = carl@george.computer
license = MIT
license_file = LICENSE
description = Library for reading dnf/yum repositories
url = https://github.com/carlwgeorge/repomd
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = repomd
setup_requires = setuptools>=38.6.0
install_requires = defusedxml
python_requires = >=3.6
package_dir = 
    = source

[options.extras_require]
test = pytest; pytest-cov; pytest-flake8; lxml

[tool:pytest]
addopts = --verbose --flake8 --cov repomd --cov-fail-under 100

[flake8]
max-line-length = 120

[coverage:report]
show_missing = true
